// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offsetBefore renders 0 1`] = `
Array [
  .c0 {
  offset-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetBefore renders function 1`] = `
Array [
  .c0 {
  offset-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: has;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: has;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetBefore renders invalid theme path 1`] = `
Array [
  .c0 {
  offset-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetBefore renders negative number 1`] = `
Array [
  .c0 {
  offset-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetBefore renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    offset-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    offset-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-before: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-before: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetBefore renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    offset-before: July;
  }
}

@media April {
  .c0 {
    offset-before: August;
  }
}

@media January {
  .c0 {
    offset-before: September;
  }
}

@media April {
  .c0 {
    offset-before: November;
  }
}

@media June {
  .c0 {
    offset-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    offset-before: July;
  }
}

@media April {
  .c0 {
    offset-before: August;
  }
}

@media January {
  .c0 {
    offset-before: September;
  }
}

@media April {
  .c0 {
    offset-before: November;
  }
}

@media June {
  .c0 {
    offset-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-before: January;
  }
}

@media April {
  .c0 {
    offset-before: December;
  }
}

@media January {
  .c0 {
    offset-before: April;
  }
}

@media April {
  .c0 {
    offset-before: May;
  }
}

@media June {
  .c0 {
    offset-before: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-before: January;
  }
}

@media April {
  .c0 {
    offset-before: December;
  }
}

@media January {
  .c0 {
    offset-before: April;
  }
}

@media April {
  .c0 {
    offset-before: May;
  }
}

@media June {
  .c0 {
    offset-before: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetBefore renders postitive number 1`] = `
Array [
  .c0 {
  offset-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetBefore renders string 1`] = `
Array [
  .c0 {
  offset-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: June;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: June;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetBefore renders valid theme path 1`] = `
Array [
  .c0 {
  offset-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
